--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -10,7 +10,7 @@
       <bool>true</bool>
     </edit>
     <edit mode="assign" name="hintstyle">
-      <const>hintslight</const>
+      <const>hintfull</const>
     </edit>
     <edit mode="assign" name="lcdfilter">
         <const>lcddefault</const>
@@ -22,7 +22,7 @@
       <bool>true</bool>
     </edit>
     <edit name="embeddedbitmap" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
   </match>
 
